
=======================================================
            WanT code:  Log of Changes 
=======================================================


-------------------------------------------------
Date: XX Nov 2005    Version: WanT-2.0.0
-------------------------------------------------

23 Nov 2005      summary subroutine, writing to stdout information about
                 the system, added to transport; nprint parameter added 
                 to INPUT_CONDUCTOR namelist. (BB)  

22 Nov 2005      CMPLX intrinsic always used with the explicit kind (dbl) for
                 portability purposes (Courtesy of Carlo Cavazzoni). (AF)

17 Nov 2005      Test references updated. (BB) 
                 environment.conf and run.sh scripts (tests) improved. (AF)

16 Nov 2005      Portability issue fixed in run.sh scripts (tests). (AF) 

15 Nov 2005      correlation_module added to transport. conductor code cleaned. (AF)

11 Nov 2005      workspace module added to transport in order to clear the main
                 source. Cleanup performed in conductor code. Transport input 
                 changed: no more namelists in HAMILTONIAN_DATA, chnaged to iotk fmt. 
                 Test updated accordingly. (AF)

08 Nov 2005      Bugs fixed in omega.f90; (AC)
                 optimization performed in omega.f90 and overlap_update.f90. 
                 omegai.f90 used also in wannier to compute Omega_I instead of the 
                 global call to omega.f90 .(AF)

07 Nov 2005      kind related issues ( dbl, DP, *8, DBLE, REAL, DREAL, DCMPLX ) 
                 uniformized using dbl=SELECTED_REAL_KIND() around the code. (AF)

04 Nov 2005      Makefile added in Docs/tex; transport_init.f90 routine removed; 
                 Documentation updated. (AF)
                 Kpt implementation in transport completed. (AF & BB) 

03 Nov 2005      Portability bugs fixed in fft routines and libs Makefile 
                 (courtesy of MBN). (AF)
